rest api: dump full list of clients ip and domains #21
