# doc/swagger.yml
@@ -151,7 +151,38 @@ paths:
               schema:
                 type: string
       summary: Top suspicious domains list         
-   
+  /dump/requesters:
+    get:
+      parameters:
+        - in: query
+          name: stream
+          schema:
+            type: string
+          description: stream name
+      responses:
+        '200':
+          description: Return full list of requesters
+          content:
+            text/plain:
+              schema:
+                type: string
+      summary: Return full list of requesters 
+  /dump/domains:
+    get:
+      parameters:
+        - in: query
+          name: stream
+          schema:
+            type: string
+          description: stream name
+      responses:
+        '200':
+          description: Return full list of domains
+          content:
+            text/plain:
+              schema:
+                type: string
+      summary: Return full list of domains
 security: []
 externalDocs:
   url: 'https://github.com/dmachard/go-dnscollector'
